[package]
name = "hackaton_13-04-19"
version = "0.1.0"
authors = ["Aleksandrov Vladimir <invis87@gmail.com>"]
publish = false
description = "Shared canvas on Fluence"
edition = "2018"

[lib]
name = "shared_canvas"
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
linked-hash-map = "0.5.1"
fluence = { version = "0.1.4", features = ["wasm_logger"] }
